--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "mongoose": "^8.0.3",
+    "node-cron": "^4.2.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
